# open_ai_mcp

./: pyproject.toml
src/: open_ai_chat.py  tool_calling_example.py
